Issue #16: Interim commit.

--- a/src/templates/css/index.template.css
+++ b/src/templates/css/index.template.css
@@ -18,7 +18,11 @@
  /**
   * @file Template for the top level css file.
   */
-  
+ 
+/**
+ * Class for use on svg <object>s.  Changes them to blocks and sets the margins
+ * so that the object is centered in its container.
+ */ 
 .svg-cfg
 {
 	display:block;
