(Issue #16) :  Improve HTML output Final commit of Dojo work.  Giving up.

--- a/src/templates/css/index.template.css
+++ b/src/templates/css/index.template.css
@@ -29,7 +29,8 @@
 	/* Center the svg in its container. */
 	margin-left:auto;
 	margin-right:auto;
-	width: 100%;
+	/*width: 100%;*/
+	/*height: 100%;*/
 }
 
 /* Styling for the Dojo widgets */
