(Issue #16) :  Improve HTML output Interim commit.

--- a/src/templates/index.template.html
+++ b/src/templates/index.template.html
@@ -25,7 +25,7 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 	<!-- The jQuery UI stylesheet. -->
 	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css">
 	
-	<!-- The jQuery UI Layout Plug-in's stylesheet. -->
+	<!-- The jQuery UI Layout Plug-in's default stylesheet. -->
 	<link rel="stylesheet" type="text/css" href="css/layout-default-latest.css">
 	
 	<!-- CoFlo's stylesheet. -->
